# ai-zero-trust-threat-system

./: .env  LICENSE  README.md
.github/workflows/: apisec-scan.yml
backend/: Cargo.toml  Dockerfile
backend/src/: config.rs  main.rs
backend/src/ai/: behavioral_modal.rs  heuristic_model.rs  mod.rs
backend/src/api/: endpoints.rs  mod.rs
backend/src/utils/: data_processor.rs  logger.rs
config/: default.toml
database/: init.sql
frontend/src/: App.svelte  main.svelte  package.json  rollup.config.js  wasm-pack.toml
frontend/src/components/: Dashboard.svelte
frontend/src/wasm/: main.rs
infra/elk/: docker-compose.yml
infra/istio/: istio-config.yml
infra/kafka/: docker-compose.yml
infra/kubernetes/: deployment.yml
infra/zeek/: zeek_config.conf
scripts/: deploy.sh  train_model.rs
